7. reduce register usage (maybe by removing the use of DevMem2D?)
	7.1 remove use of DevMem2D - only shaved off 4 to 5 registers. still at about 24...
		number of iterations went down.  from 53 to 45.  execution time went up from 1.9s to 2.1s.
		probably from the additional index computation.
	7.2 try volatile.
		not much change.
8. x2's data loading is reading data looping over ix, for each ty.  this means at a given point in time, the block is reading from multiple y's and the access is not coalesced between threads.
	the shared 2D array is organized right - ty is inner loop.
	reading from global memory is not organized right for easy coalescing.
	
	fixed by taking advantage of the square shared mem blocks.
		now using 43 or 44 registers.
***		but now int imrecon gray takes 	875ms.  still 45 iterations.
	
	look at visual profiler - somehow it's not able to do more than one run...
		but the info suggest that the occupancy is low for x2
		increase thread for x2 to 32 - small incremental effect.
	as comparison: original x scan with 16x32 threads:  1.4 s.
	
9. turn stream back on.	- no difference.
10.	reduce number of __syncthreads() - mostly in y. - reduced to 750ms for 8con gray.  4con gray still at 2.1
	***
11. using 32 threads (warp size). 
	*** also change to avoid bank conflicts.  (5) register use down from 45 to 31 to 32. - down to 588ms for 8conn grayscale

12. use page-locked memory for host to device? - matters for host to device.
16. restricted pointers (B.2.4).  also changed compiler flags to add -O3, -fPIC (still using sm_20 and --use_fast_math)
	no difference...
14. use intrinsics (C.2)?  does not make any difference for this code.

TODO:
	
17. reduce register usage: compile with --keep --ptx
13. remove as much conditionals as possible.
15. optimize out sync points (5.4.3)?  
18. allocate device memory once for entire run - possible?  __device__ with __shared__ has scope of?